# keccak-tiny

./: CMakeLists.txt  README.md  keccak-tiny-unrolled.c  keccak-tiny.c  keccak-tiny.h
include/: keccak-tiny.h
include/keccak-tiny/: keccak-tiny.h
src/: keccak-tiny-unrolled.c  keccak-tiny.c
